[US344781] MASFoundation tests update, making enrollment URL request public, pulling trustPublicPKI from the msso_config